Move resolving of pricing plans, regions, vehicle types and system to graphql layer